fixed nav bar alignment

--- a/src/assets/css/Art.css
+++ b/src/assets/css/Art.css
@@ -30,4 +30,8 @@
         display: flex;
         flex-direction: column;
     }
+
+    .gallery-img:hover {
+        transform: scale(1);
+    }
 }
